--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html>
  <head>
   <link rel="stylesheet" href="Style.css">
-  <script src="Script.js"></script>
+  <script src="Script.js" charset="UTF-8"></script>
   <title>Gradrechner</title>
  </head>
  <body>
   <div>
-   <h1><strong>Gradwertrechner</strong></h1><br>
+   <h1><strong>Gradwertrechner</strong></h1>
   </div>
   <!-- Umfangeingabe -->
   <div id="Umfangstyle">
-   <h2>Gib deinen Umfang ein:</h2><br>
+   <h2>Gib deinen Umfang ein:</h2>
    <input type="text" placeholder="Umfang" id="Umfang">
    <p id="U"> </p>
   </div>
   <!-- Gradwerteeingabe -->
   <div id="Gradstyle">
-   <h2>Gib deine zu berechnenden Gradwerte ein:</h2><br>
+   <h2>Gib deine zu berechnenden Gradwerte ein:</h2>
    <input type="text" placeholder="Gradwerte" id="Gradwerte">
    <!--Berechnungsbutton-->
    <button onclick="Berechnen()">Berechnen</button>
-   <!--Anzeige-->
-   <div id="S"> </div>
   </div>
+  <!--Anzeige-->
+  <div id="S"> </div>
  </body>
 </html>
