--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   <!-- Gradwerteeingabe -->
   <div id="Gradstyle">
-   <h2>Gib deine zu berechnenden Gradwerte ein:</h2>
+   <h2>Gib deine zu berechnende Gradzahl ein:</h2>
    <input type="text" placeholder="Gradwerte" id="Gradwerte">
    <!--Berechnungsbutton-->
    <button onclick="Berechnen()">Berechnen</button>
