--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <title>Gradrechner</title>
  </head>
  <body>
-  <div>
-   <h1><strong>Gradwertrechner</strong></h1>
+  <div id="Header">
+   <ul id="nav">
+    <li><h2>Gradwertrechner<h2></li>
+    <li><h2>Bohrerdrehzahlrechner</h2></il>
+   </ul>
   </div>
   <!-- Umfangeingabe -->
   <div id="Umfangstyle">
@@ -25,6 +28,6 @@
    <br><br>
   </div>
   <!--Anzeige-->
-  <div id="S"> </div>
+  <div id="Anzeige"> </div>
  </body>
 </html>
