--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Gradrechner</title>
  </head>
  <body>
-  <div id="Header">
+  <div id="header">
    <ul id="nav">
-    <li><h2>Gradwertrechner<h2></li>
-    <li><h2>Bohrerdrehzahlrechner</h2></il>
+    <li><h2><a href="index.html">Gradwertrechner</a><h2></li>
+    <li><h2><a href="bohrer.html">Bohrerdrehzahlrechner</a></h2></il>
    </ul>
   </div>
   <!-- Umfangeingabe -->
