--- a/bohrer.html
+++ b/bohrer.html
@@ -11,6 +11,7 @@
    <ul id="nav">
     <li><h2><a href="index.html">Gradwertrechner</a></h2></li>
     <li><h2><a href="bohrer.html">Bohrerdrehzahlrechner</a></h2></li>
+    <li><h2><a href="Kernloch.html">Kernlochrechner</a></h2></il>
    </ul>
   </div>
 <!--Bohrerdurchmessereingabe-->
@@ -28,5 +29,5 @@
     <label for="h2">H2 Stahl</label>
   </div>
 <!--bohrerdrehzahlanzeige-->
-  <p id="bohrerdrehzahlanzeige"> </p>
+  <div id="bohrerdrehzahlanzeige"> </div>
 </html>
