--- a/Kernloch.html
+++ b/Kernloch.html
@@ -9,9 +9,9 @@
  <body>
   <div id="header">
    <ul id="nav">
-    <li><h2><a href="index.html">Gradwertrechner</a><h2></li>
-    <li><h2><a href="bohrer.html">Bohrerdrehzahlrechner</a></h2></il>
-    <li><h2><a href="Kernloch.html">Kernlochrechner</a></h2></il>
+    <li><h2><a href="index.html">Gradwertrechner</a></h2></li>
+    <li><h2><a href="bohrer.html">Bohrerdrehzahlrechner</a></h2></li>
+    <li><h2><a href="Kernloch.html">Kernlochrechner</a></h2></li>
    </ul>
   </div>
   <!--Gewindeeingabe-->
@@ -22,4 +22,4 @@
     <p id="gewindeanzeige"></p>
   </div>
   <!--Kernlochanzeige-->
-  <div id="kernlochanzeige"></div>
+  <div id="kernlochanzeige"> </div>
