--- a/index.html
+++ b/index.html
@@ -9,26 +9,9 @@
  <body>
   <div id="header">
    <ul id="nav">
-    <li><h2><a href="index.html">Gradwertrechner</a><h2></li>
-    <li><h2><a href="bohrer.html">Bohrerdrehzahlrechner</a></h2></il>
+    <li><h2><a href="Gradwertrechner.html">Gradwertrechner</a><h2></li>
+    <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahlrechner</a></h2></il>
     <li><h2><a href="Kernloch.html">Kernlochrechner</a></h2></il>
+    <li><h2><a href="Anzugsdrehmoment.html">Anzugsdrehmoment</a></h2></li>  
    </ul>
   </div>
-  <!-- Umfangeingabe -->
-  <div id="Umfangstyle">
-   <h2>Gib deinen Umfang ein:</h2>
-   <input type="text" placeholder="Umfang" id="Umfang">
-   <p id="U"> </p>
-  </div>
-  <!-- Gradwerteeingabe -->
-  <div id="Gradstyle">
-   <h2>Gib deine zu berechnende Gradzahl ein:</h2>
-   <input type="text" placeholder="Gradwerte" id="Gradwerte">
-   <!--Berechnungsbutton-->
-   <button onclick="Berechnen()">Berechnen</button>
-   <br><br>
-  </div>
-  <!--Anzeige-->
-  <div id="Anzeige"> </div>
- </body>
-</html>
