--- a/Bohrerdrehzahl.html
+++ b/Bohrerdrehzahl.html
@@ -11,18 +11,26 @@
    <ul id="nav">
     <li><h2><a href="Gradwertrechner.html">Gradwertrechner</a></h2></li>
     <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahlrechner</a></h2></li>
-    <li><h2><a href="Kernloch.html">Kernlochrechner</a></h2></li>
+    <li><h2><a href="Kernloch.html">Kernlochrechner</a></h2></il>
     <li><h2><a href="Anzugsdrehmoment.html">Anzugsdrehmoment</a></h2></li>
    </ul>
   </div>
-  <!--Gewindeeingabe-->
+<!--Bohrerdurchmessereingabe Eingabe 1 -->
   <div id="Eingabe1">
-    <h2>Gib dein Metrisches ISO-Gewinde ein:</h2>
-    <input type="text" placeholder="metrisches Gewinde" id="gewindeeingabe">
-    <button type="button" onclick="kernlochrechner()">Berechnen</button><br>
-    <p id="gewindeanzeige"></p>
+    <h2>Gib deinen Bohrerdurchmesser an:</h2>
+    <input type="text" placeholder="Bohrerdurchmesser" id="bohrereingabe">
+    <button onclick="drehzahlberechnung()">Berechnen</button> <br>
+    <p id="durchmesseranzeige"> </p>
   </div>
-  <!--Kernlochanzeige-->
+<!--Materialeingabe Eingabe 2 -->
+  <div id="Eingabe2">
+    <h2>Gib dein zu Bohrendes Material an</h2>
+    <input type="checkbox" id="va">
+    <label for="va">Edelstahl</label><br>
+    <input type="checkbox" id="h2">
+    <label for="h2">H2 Stahl</label>
+  </div>
+<!--bohrerdrehzahlanzeige-->
   <div id="Anzeige"> </div>
  </body>
 </html>
