--- a/Anzugsdrehmoment.html
+++ b/Anzugsdrehmoment.html
@@ -35,6 +35,8 @@
       <label for="h2">12.9</label>
     </div>
   <!--Anzugsdrehmoment Anzeige -->
-    <div id="Anzeige"> </div>
+    <div id="Anzeige">
+      <a id="drehmomentanzeige"> </a>
+    </div>
  </body>
 </html>
