--- a/Bohrerdrehzahl.html
+++ b/Bohrerdrehzahl.html
@@ -31,6 +31,8 @@
     <label for="h2">H2 Stahl</label>
   </div>
 <!--bohrerdrehzahlanzeige-->
-  <div id="Anzeige"> </div>
+  <div id="Anzeige">
+    <a id=bohrerdrehzahlanzeige> </a>
+  </div>
  </body>
 </html>
