--- a/Kernloch.html
+++ b/Kernloch.html
@@ -23,6 +23,8 @@
     <p id="gewindeanzeige"></p>
   </div>
   <!--Kernlochanzeige-->
-  <div id="Anzeige"> </div>
+  <div id="Anzeige">
+    <a id="kernlochanzeige"> </a>
+  </div>
  </body>
 </html>
