--- a/Bohrerdrehzahl.html
+++ b/Bohrerdrehzahl.html
@@ -24,7 +24,7 @@
   </div>
 <!--Materialeingabe Eingabe 2 -->
   <div id="Eingabe2">
-    <h2>Gib dein zu Bohrendes Material an</h2>
+    <h2>Gib dein zu Bohrendes Material an:</h2>
     <input type="checkbox" id="va">
     <label for="va">Edelstahl</label><br>
     <input type="checkbox" id="h2">
