--- a/Anzugsdrehmoment.html
+++ b/Anzugsdrehmoment.html
@@ -19,20 +19,20 @@
     <div id="Eingabe1">
       <h2>Gib deine Schraubengröße an</h2>
       <input type="text" placeholder="Schraubengröße" id="schraubeneingabe">
-      <button onclick="Anzugsdrehmoment()">Berechnen</button> <br>
+      <button onclick="anzugsdrehmoment()">Berechnen</button> <br>
       <p id="schraubengröße"> </p>
     </div>
   <!--Fertigungsklasse Eingabe 2 -->
     <div id="Eingabe2">
       <h2>Gib deine Fertigungsklasse an</h2>
-      <input type="checkbox" id="5.6">
-      <label for="va">5.6</label><br>
-      <input type="checkbox" id="8.8">
-      <label for="h2">8.8</label><br>
-      <input type="checkbox" id="10.9">
-      <label for="va">10.9</label><br>
-      <input type="checkbox" id="12.9">
-      <label for="h2">12.9</label>
+      <input type="checkbox" id="s5_6">
+      <label for="s5.6">5.6</label><br>
+      <input type="checkbox" id="s8_8">
+      <label for="s8.8">8.8</label><br>
+      <input type="checkbox" id="s10_9">
+      <label for="s10.9">10.9</label><br>
+      <input type="checkbox" id="s12_9">
+      <label for="s12.9">12.9</label>
     </div>
   <!--Anzugsdrehmoment Anzeige -->
     <div id="Anzeige">
