--- a/Anzugsdrehmoment.html
+++ b/Anzugsdrehmoment.html
@@ -18,21 +18,21 @@
   <!--Schrauben Eingabe 1 -->
     <div id="Eingabe1">
       <h2>Gib deine Schraubengröße an</h2>
-      <input type="text" placeholder="Schraubengröße" id="schraubeneingabe">
+      <input style="height:30px"; type="text" placeholder="Schraubengröße" id="schraubeneingabe">
       <button onclick="anzugsdrehmoment()">Berechnen</button> <br>
       <p id="schraubengröße"> </p>
     </div>
   <!--Fertigungsklasse Eingabe 2 -->
     <div id="Eingabe2">
       <h2>Gib deine Fertigungsklasse an</h2>
-      <input type="checkbox" id="s5_6">
-      <label for="s5.6">5.6</label><br>
-      <input type="checkbox" id="s8_8">
-      <label for="s8.8">8.8</label><br>
-      <input type="checkbox" id="s10_9">
-      <label for="s10.9">10.9</label><br>
-      <input type="checkbox" id="s12_9">
-      <label for="s12.9">12.9</label>
+      <h3><input style="height: 20px; width: 20px;" type="checkbox" id="s5_6">
+      <label for="s5.6">5.6</label><br></h3>
+      <h3><input style="height: 20px; width: 20px;" type="checkbox" id="s8_8">
+      <label for="s8.8">8.8</label><br></h3>
+      <h3><input style="height: 20px; width: 20px;" type="checkbox" id="s10_9">
+      <label for="s10.9">10.9</label><br></h3>
+      <h3><input style="height: 20px; width: 20px;" type="checkbox" id="s12_9">
+      <label for="s12.9">12.9</label></h3>
     </div>
   <!--Anzugsdrehmoment Anzeige -->
     <div id="Anzeige">
