--- a/Bohrerdrehzahl.html
+++ b/Bohrerdrehzahl.html
@@ -18,17 +18,17 @@
 <!--Bohrerdurchmessereingabe Eingabe 1 -->
   <div id="Eingabe1">
     <h2>Gib deinen Bohrerdurchmesser an:</h2>
-    <input type="text" placeholder="Bohrerdurchmesser" id="bohrereingabe">
+    <input style="height:30px"; type="text" placeholder="Bohrerdurchmesser" id="bohrereingabe">
     <button onclick="drehzahlberechnung()">Berechnen</button> <br>
     <p id="durchmesseranzeige"> </p>
   </div>
 <!--Materialeingabe Eingabe 2 -->
   <div id="Eingabe2">
     <h2>Gib dein zu Bohrendes Material an:</h2>
-    <input type="checkbox" id="va">
-    <label for="va">Edelstahl</label><br>
-    <input type="checkbox" id="h2">
-    <label for="h2">H2 Stahl</label>
+    <h3><input style="height: 20px; width: 20px;" type="checkbox" id="va">
+    <label for="va">Edelstahl</label><br></h3>
+    <h3><input style="height: 20px; width: 20px;" type="checkbox" id="h2">
+    <label for="h2">H2 Stahl</label></h3>
   </div>
 <!--bohrerdrehzahlanzeige-->
   <div id="Anzeige">
