--- a/Kernloch.html
+++ b/Kernloch.html
@@ -18,9 +18,9 @@
   <!--Gewindeeingabe-->
   <div id="Eingabe1">
     <h2>Gib dein Metrisches ISO-Gewinde ein:</h2>
-    <input type="text" placeholder="metrisches Gewinde" id="gewindeeingabe">
+    <input style="height:30px"; type="text" placeholder="metrisches Gewinde" id="gewindeeingabe">
     <button type="button" onclick="kernlochrechner()">Berechnen</button><br>
-    <p id="gewindeanzeige"></p>
+    <p id="gewindeanzeige"> </p>
   </div>
   <!--Kernlochanzeige-->
   <div id="Anzeige">
