--- a/Gradwertrechner.html
+++ b/Gradwertrechner.html
@@ -18,13 +18,13 @@
   <!-- Umfangeingabe Eingabefeld 1 -->
   <div id="Eingabe1">
    <h2>Gib deinen Umfang ein:</h2>
-   <input type="text" placeholder="Umfang" id="Umfang">
+   <input style="height: 30px"; type="text" placeholder="Umfang" id="Umfang">
    <p id="U"> </p>
   </div>
   <!-- Gradwerteeingabe Eingabefeld 2 -->
   <div id="Eingabe2">
    <h2>Gib deine zu berechnende Gradzahl ein:</h2>
-   <input type="text" placeholder="Gradwerte" id="Gradwerte">
+   <input style="height:30px"; type="text" placeholder="Gradwerte" id="Gradwerte">
    <!--Berechnungsbutton-->
    <button onclick="Berechnen()">Berechnen</button>
    <br><br>
