--- a/Gradwertrechner.html
+++ b/Gradwertrechner.html
@@ -13,6 +13,7 @@
     <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahlrechner</a></h2></il>
     <li><h2><a href="Kernloch.html">Kernlochrechner</a></h2></il>
     <li><h2><a href="Anzugsdrehmoment.html">Anzugsdrehmoment</a></h2></li>
+    <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>    
    </ul>
   </div>
   <!-- Umfangeingabe Eingabefeld 1 -->
