--- a/Kreissegment-Rechner.html
+++ b/Kreissegment-Rechner.html
@@ -17,5 +17,20 @@
     <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></<h2></li>
    </ul>
   </div>
+  <!--Radius Eingabe -->
+  <div id="Eingabe1">
+    <h2>Geben Sie ihren Kreisdurchmesser an (in mm)</h2>
+      <input style="height:30px"; type="text" placeholder="Kreisdurchmesser" id="KreisdurchmesserE">
+  </div>
+  <!--Teilungs Eingabe -->
+  <div id="Eingabe2">
+    <h2>Geben Sie ihre Teilung an</h2>
+    <input style="height:30px"; type="text" placeholder="Kreisteilung" id="KreisteilungE">
+    <button onclick="Kreissegmentbrechnung()">Berechnen</button> <br>
+  </div>
+  <!--Ergebnis -->
+  <div id="Anzeige">
+    <a id="Längenanzeige"> </a>
+  </div>
  </body>
 </html>
