--- a/Kernloch.html
+++ b/Kernloch.html
@@ -9,11 +9,12 @@
  <body>
   <div id="header">
    <ul id="nav">
-    <li><h2><a href="Gradwertrechner.html">Gradwertrechner</a></h2></li>
-    <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahlrechner</a></h2></li>
-    <li><h2><a href="Kernloch.html">Kernlochrechner</a></h2></li>
+    <li><h2><a href="Gradwertrechner.html">Gradwert-Rechner</a></h2></li>
+    <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahl-Rechner</a></h2></li>
+    <li><h2><a href="Kernloch.html">Kernloch-Rechner</a></h2></li>
     <li><h2><a href="Anzugsdrehmoment.html">Anzugsdrehmoment</a></h2></li>
-    <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>    
+    <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>
+    <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></<h2></li>
    </ul>
   </div>
   <!--Gewindeeingabe-->
