--- a/Blech-Gewicht-Rechner.html
+++ b/Blech-Gewicht-Rechner.html
@@ -15,6 +15,7 @@
     <li><h2><a href="Anzugsdrehmoment.html">Anzugsdrehmoment</a></h2></li>
     <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>
     <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></<h2></li>
+    <li><h2><a href="isoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
    </ul>
   </div>
   <div id="Eingabe1">
