--- a/IsoGewindeTabelle.html
+++ b/IsoGewindeTabelle.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
  <head>
   <link rel="stylesheet" href="Style.css">
@@ -20,18 +19,13 @@
   </div>
   <!--Radius Eingabe -->
   <div id="Eingabe1">
-    <h2>Geben Sie ihren Kreisdurchmesser an (in mm)</h2>
-      <input style="height:30px"; type="text" placeholder="Kreisdurchmesser" id="KreisdurchmesserE">
-  </div>
-  <!--Teilungs Eingabe -->
-  <div id="Eingabe2">
-    <h2>Geben Sie ihre Teilung an</h2>
-    <input style="height:30px"; type="text" placeholder="Kreisteilung" id="KreisteilungE">
-    <button onclick="Kreissegmentbrechnung()">Berechnen</button> <br>
+    <h2>Geben Sie hier ihr gewünschtes metrisches Gewinde ein</h2>
+      <a>M: </a><input style="height:30px"; type="tel" placeholder="Iso Gewinde" id="isoGewindeE">
+      <button onclick="isoGewindeTabelle()">Berechnen</button> <br>
   </div>
   <!--Ergebnis -->
   <div id="Anzeige">
-    <a id="Längenanzeige"> </a>
+    <a id="isoGewindeTabelleA"> </a>
   </div>
  </body>
 </html>
