--- a/Gradwertrechner.html
+++ b/Gradwertrechner.html
@@ -15,7 +15,7 @@
     <li><h2><a href="Anzugsdrehmoment.html">Anzugsdrehmoment</a></h2></li>
     <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>
     <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></<h2></li>
-    <li><h2><a href="isoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
+    <li><h2><a href="IsoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
    </ul>
   </div>
   <!-- Umfangeingabe Eingabefeld 1 -->
