--- a/isoGewindeTabelle.html
+++ b/isoGewindeTabelle.html
@@ -26,7 +26,9 @@
   </div>
   <!--Ergebnis -->
   <div id="Anzeige">
-    <a id="isoGewindeTabelleA"> </a>
-  </div>
+    <a id="mGewindeA1"> </a><br>
+    <a id="mGewindeA2"> </a><br>
+    <a id="mGewindeA3"> </a><br>
+  </div>  
  </body>
 </html>
