--- a/isoGewindeTabelle.html
+++ b/isoGewindeTabelle.html
@@ -18,18 +18,18 @@
   </div>
   <!--Radius Eingabe -->
   <div id="Eingabe1">
-    <h2>Geben Sie ihren Kreisdurchmesser an (in mm)</h2>
-      <input style="height:30px"; type="text" placeholder="Kreisdurchmesser" id="KreisdurchmesserE">
-  </div>
-  <!--Teilungs Eingabe -->
-  <div id="Eingabe2">
-    <h2>Geben Sie ihre Teilung an</h2>
-    <input style="height:30px"; type="text" placeholder="Kreisteilung" id="KreisteilungE">
-    <button onclick="Kreissegmentbrechnung()">Berechnen</button> <br>
+    <h2>Geben Sie hier ihr gewünschtes metrisches Gewinde ein</h2>
+      <a>M: </a><input style="height:30px"; type="tel" placeholder="Iso Gewinde" id="isoGewindeE">
+      <button onclick="isoGewindeTabelle()">Berechnen</button> <br>
   </div>
   <!--Ergebnis -->
   <div id="Anzeige">
-    <a id="Längenanzeige"> </a>
+    <a id="mGewindeA1"> </a><br>
+    <a id="mGewindeA2"> </a><br>
+    <a id="mGewindeA3"> </a><br>
+    <a id="mGewindeA4"> </a><br>
+    <a id="mGewindeA5"> </a><br>
+    <a id="mGewindeA6"> </a><br>
   </div>
  </body>
 </html>
