--- a/IsoGewindeTabelle.html
+++ b/IsoGewindeTabelle.html
@@ -11,11 +11,9 @@
    <ul id="nav">
     <li><h2><a href="Gradwertrechner.html">Gradwert-Rechner</a><h2></li>
     <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahl-Rechner</a></h2></il>
-    <li><h2><a href="Kernloch.html">Kernloch-Rechner</a></h2></il>
-    <li><h2><a href="Anzugsdrehmoment.html">Anzugsdrehmoment</a></h2></li>
     <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>
     <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></<h2></li>
-    <li><h2><a href="isoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
+    <li><h2><a href="IsoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
    </ul>
   </div>
   <!--Radius Eingabe -->
@@ -26,7 +24,12 @@
   </div>
   <!--Ergebnis -->
   <div id="Anzeige">
-    <a id="isoGewindeTabelleA"> </a>
+    <a id="mGewindeA1"> </a><br>
+    <a id="mGewindeA2"> </a><br>
+    <a id="mGewindeA3"> </a><br>
+    <a id="mGewindeA4"> </a><br>
+    <a id="mGewindeA5"> </a><br>
+    <a id="mGewindeA6"> </a><br>
   </div>
  </body>
 </html>
