--- a/IsoGewindeTabelle.html
+++ b/IsoGewindeTabelle.html
@@ -9,10 +9,7 @@
  <body>
   <div id="header">
    <ul id="nav">
-    <li><h2><a href="Gradwertrechner.html">Gradwert-Rechner</a><h2></li>
-    <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahl-Rechner</a></h2></il>
-    <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>
-    <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></<h2></li>
+    <li><h2><a href="Index.html">Startseite</a></h2></li>
     <li><h2><a href="IsoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
    </ul>
   </div>
@@ -20,7 +17,7 @@
   <div id="Eingabe1">
     <h2>Geben Sie hier ihr gewünschtes metrisches Gewinde ein</h2>
       <a>M: </a><input style="height:30px"; type="tel" placeholder="Iso Gewinde" id="isoGewindeE">
-      <button onclick="isoGewindeTabelle()">Berechnen</button> <br>
+      <button onclick="isoGewindeTabelle()">Anzeigen</button> <br>
   </div>
   <!--Ergebnis -->
   <div id="Anzeige">
