--- a/Blech-Gewicht-Rechner.html
+++ b/Blech-Gewicht-Rechner.html
@@ -9,11 +9,11 @@
  <body>
   <div id="header">
    <ul id="nav">
+    <li><h2><a href="Index.html">Startseite</a></h2></li>
     <li><h2><a href="Gradwertrechner.html">Gradwert-Rechner</a><h2></li>
     <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahl-Rechner</a></h2></il>
     <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>
     <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></<h2></li>
-    <li><h2><a href="IsoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
    </ul>
   </div>
   <div id="Eingabe1">
