--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
   <div id="header">
    <ul id="nav">
-    <li><h2><a href="Index.html">Startseite</a></h2></li>
+    <li><h2><a href="index.html">Startseite</a></h2></li>
     <li><h2><a href="Rechner.html">Rechner</a><h2></li>
     <li><h2><a href="Tabellen.html">Tabellen</a></h2></il>
    </ul>
