--- a/Rechner.html
+++ b/Rechner.html
@@ -9,7 +9,7 @@
  <body>
   <div id="header">
    <ul id="nav">
-    <li><h2><a href="Index.html">Startseite</a></h2></li>
+    <li><h2><a href="index.html">Startseite</a></h2></li>
     <li><h2><a href="Gradwertrechner.html">Gradwert-Rechner</a><h2></li>
     <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahl-Rechner</a></h2></il>
     <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>
