--- a/Tabellen.html
+++ b/Tabellen.html
@@ -9,7 +9,7 @@
  <body>
   <div id="header">
    <ul id="nav">
-    <li><h2><a href="Index.html">Startseite</a></h2></li>
+    <li><h2><a href="index.html">Startseite</a></h2></li>
     <li><h2><a href="IsoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
    </ul>
   </div>
