--- a/Blech-Gewicht-Rechner.html
+++ b/Blech-Gewicht-Rechner.html
@@ -31,6 +31,15 @@
     <h3><input style="height: 20px; width: 20px;" type="checkbox" id="h2g">
     <label for="h2">H2 Stahl</label></h3>
   </div>
+  <!--Enterbutton Trigger-->
+   <script>
+   document.addEventListener ('keypress', function(e){
+     if (e.key === 'Enter'){
+       gewichtrechner();
+     }
+   });
+   </script>
+
   <div id="Anzeige">
     <a id=gewichtanzeige> </a>
  </body>
