--- a/Bohrerdrehzahl.html
+++ b/Bohrerdrehzahl.html
@@ -31,6 +31,16 @@
     <h3><input style="height: 20px; width: 20px;" type="checkbox" id="h2">
     <label for="h2">H2 Stahl</label></h3>
   </div>
+
+  <!--Enterbutton Trigger-->
+   <script>
+   document.addEventListener ('keypress', function(e){
+     if (e.key === 'Enter'){
+       drehzahlberechnung();
+     }
+   });
+   </script>
+
 <!--bohrerdrehzahlanzeige-->
   <div id="Anzeige">
     <a id=bohrerdrehzahlanzeige> </a>
