--- a/Gradwertrechner.html
+++ b/Gradwertrechner.html
@@ -26,8 +26,18 @@
   <div id="Eingabe2">
    <h2>Gib deine zu berechnende Gradzahl ein:</h2>
    <input style="height:30px"; type="text" placeholder="Gradwerte" id="Gradwerte">
+
+  <!--Enterbutton Trigger-->
+   <script>
+   document.addEventListener ('keypress', function(e){
+     if (e.key === 'Enter'){
+       Berechnen();
+     }
+   });
+   </script>
+
    <!--Berechnungsbutton-->
-   <button onclick="Berechnen()">Berechnen</button>
+   <button id="Gradbutton" onclick="Berechnen()">Berechnen</button>
    <br><br>
   </div>
   <!--Anzeige-->
