--- a/Blech-Gewicht-Rechner.html
+++ b/Blech-Gewicht-Rechner.html
@@ -18,9 +18,9 @@
   </div>
   <div id="Eingabe1">
     <h2>Gib deine Blechabmaße, in mm, an:</h2>
-    <input style="height:30px"; type="text" placeholder="Blech Breite" id="blechbreite"><br>
-    <input style="height:30px"; type="text" placeholder="Blech Länge" id="blechlänge"><br>
-    <input style="height:30px"; type="text" placeholder="Blech Dicke" id="blechdicke"><br><br>
+    <input style="height:30px"; type="tel" placeholder="Blech Breite" id="blechbreite"><br>
+    <input style="height:30px"; type="tel" placeholder="Blech Länge" id="blechlänge"><br>
+    <input style="height:30px"; type="tel" placeholder="Blech Dicke" id="blechdicke"><br><br>
     <button onclick="gewichtrechner()">Berechnen</button> <br>
     <p id="blechabmaße"> </p>
   </div>
