--- a/Bohrerdrehzahl.html
+++ b/Bohrerdrehzahl.html
@@ -19,7 +19,7 @@
 <!--Bohrerdurchmessereingabe Eingabe 1 -->
   <div id="Eingabe1">
     <h2>Gib deinen Bohrerdurchmesser an:</h2>
-    <input style="height:30px"; type="text" placeholder="Bohrerdurchmesser" id="bohrereingabe">
+    <input style="height:30px"; type="tel" placeholder="Bohrerdurchmesser" id="bohrereingabe">
     <button onclick="drehzahlberechnung()">Berechnen</button> <br>
     <p id="durchmesseranzeige"> </p>
   </div>
