--- a/Gradwertrechner.html
+++ b/Gradwertrechner.html
@@ -19,13 +19,13 @@
   <!-- Umfangeingabe Eingabefeld 1 -->
   <div id="Eingabe1">
    <h2>Gib deinen Umfang ein:</h2>
-   <input style="height: 30px"; type="text" placeholder="Umfang" id="Umfang">
+   <input style="height: 30px"; type="tel" placeholder="Umfang" id="Umfang">
    <p id="U"> </p>
   </div>
   <!-- Gradwerteeingabe Eingabefeld 2 -->
   <div id="Eingabe2">
    <h2>Gib deine zu berechnende Gradzahl ein:</h2>
-   <input style="height:30px"; type="text" placeholder="Gradwerte" id="Gradwerte">
+   <input style="height:30px"; type="tel" placeholder="Gradwerte" id="Gradwerte">
 
   <!--Enterbutton Trigger-->
    <script>
