--- a/Kreissegment-Rechner.html
+++ b/Kreissegment-Rechner.html
@@ -19,12 +19,12 @@
   <!--Radius Eingabe -->
   <div id="Eingabe1">
     <h2>Geben Sie ihren Kreisdurchmesser an (in mm)</h2>
-      <input style="height:30px"; type="text" placeholder="Kreisdurchmesser" id="KreisdurchmesserE">
+      <input style="height:30px"; type="tel" placeholder="Kreisdurchmesser" id="KreisdurchmesserE">
   </div>
   <!--Teilungs Eingabe -->
   <div id="Eingabe2">
     <h2>Geben Sie ihre Teilung an</h2>
-    <input style="height:30px"; type="text" placeholder="Kreisteilung" id="KreisteilungE">
+    <input style="height:30px"; type="tel" placeholder="Kreisteilung" id="KreisteilungE">
     <button onclick="Kreissegmentbrechnung()">Berechnen</button> <br>
   </div>
 
