--- a/Tabellen/Tabellen.html
+++ b/Tabellen/Tabellen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet" href="../Style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <script src="Script.js" charset="UTF-8"></script>
   <title>Gradrechner</title>
@@ -9,10 +9,8 @@
  <body>
   <div id="header">
    <ul id="nav">
-    <li><h2><a href="index.html">Startseite</a></h2></li>
-    <li><h2><a href="Rechner/Rechner.html">Rechner</a><h2></li>
-    <li><h2><a href="Tabellen/Tabellen.html">Tabellen</a></h2></il>
-    <li><h2><a href="Games/Games.html">Games</a></h2></il>
+    <li><h2><a href="../index.html">Startseite</a></h2></li>
+    <li><h2><a href="IsoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
    </ul>
   </div>
  </body>
