--- a/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
+++ b/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
@@ -15,18 +15,22 @@
    </ul>
   </div>
 
-  <div>
-  <button id="B" type="button" name="button"></button>
-  <button id="B" type="button" name="button"></button>
-  <button id="B" type="button" name="button"></button><br>
+  <div id="Anzeige">
+    <a><h2> Grün ist am Zug </h2></a>
+  </div>
 
-  <button id="B" type="button" name="button"></button>
-  <button id="B" type="button" name="button"></button>
-  <button id="B" type="button" name="button"></button><br>
+  <div id="Board">
+    <button id="B" type="button" name="button"></button>
+    <button id="B" type="button" name="button"></button>
+    <button id="B" type="button" name="button"></button><br>
 
-  <button id="B" type="button" name="button"></button>
-  <button id="B" type="button" name="button"></button>
-  <button id="B" type="button" name="button"></button><br>
-</div>
+    <button id="B" type="button" name="button"></button>
+    <button id="B" type="button" name="button"></button>
+    <button id="B" type="button" name="button"></button><br>
+
+    <button id="B" type="button" name="button"></button>
+    <button id="B" type="button" name="button"></button>
+    <button id="B" type="button" name="button"></button><br>
+  </div>
  </body>
 </html>
