--- a/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
+++ b/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
@@ -20,17 +20,17 @@
   </div>
 
   <div id="Board">
-    <button id="B" type="button" name="button"></button>
-    <button id="B" type="button" name="button"></button>
-    <button id="B" type="button" name="button"></button><br>
+    <button id="B1" type="button" name="button"></button>
+    <button id="B2" type="button" name="button"></button>
+    <button id="B3" type="button" name="button"></button><br>
 
-    <button id="B" type="button" name="button"></button>
-    <button id="B" type="button" name="button"></button>
-    <button id="B" type="button" name="button"></button><br>
+    <button id="B4" type="button" name="button"></button>
+    <button id="B5" type="button" name="button"></button>
+    <button id="B6" type="button" name="button"></button><br>
 
-    <button id="B" type="button" name="button"></button>
-    <button id="B" type="button" name="button"></button>
-    <button id="B" type="button" name="button"></button><br>
+    <button id="B7" type="button" name="button"></button>
+    <button id="B8" type="button" name="button"></button>
+    <button id="B9" type="button" name="button"></button><br>
   </div>
  </body>
 </html>
