--- a/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
+++ b/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
@@ -15,12 +15,12 @@
    </ul>
   </div>
 
-  <div id="Anzeige">
-    <a><h2> Grün ist am Zug </h2></a>
+  <div>
+    <h2 id="Anzeige"> </h2>
   </div>
 
   <div id="Board">
-    <button id="B1" type="button" name="button"></button>
+    <button id="B1" type="button" name="button" onclick="player()"></button>
     <button id="B2" type="button" name="button"></button>
     <button id="B3" type="button" name="button"></button><br>
 
