--- a/Tabellen/IsoGewindeTabelle.html
+++ b/Tabellen/IsoGewindeTabelle.html
@@ -3,7 +3,7 @@
  <head>
   <link rel="stylesheet" href="../Style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <script src="Script.js" charset="UTF-8"></script>
+  <script src="../Script.js" charset="UTF-8"></script>
   <title>Gradrechner</title>
  </head>
  <body>
