--- a/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
+++ b/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
@@ -20,17 +20,23 @@
   </div>
 
   <div id="Board">
-    <button id="B1" type="button" name="button" onclick="Bf1(); main()"></button>
-    <button id="B2" type="button" name="button" onclick="Bf2(); main()"></button>
-    <button id="B3" type="button" name="button" onclick="Bf3(); main()"></button><br>
-
-    <button id="B4" type="button" name="button" onclick="Bf4(); main()"></button>
-    <button id="B5" type="button" name="button" onclick="Bf5(); main()"></button>
-    <button id="B6" type="button" name="button" onclick="Bf6(); main()"></button><br>
-
-    <button id="B7" type="button" name="button" onclick="Bf7(); main()"></button>
-    <button id="B8" type="button" name="button" onclick="Bf8(); main()"></button>
-    <button id="B9" type="button" name="button" onclick="Bf9(); main()"></button><br>
+    <div id="line1">
+      <button id="B1" type="button" name="button" onclick="Bf1(); main()"></button>
+      <button id="B2" type="button" name="button" onclick="Bf2(); main()"></button>
+      <button id="B3" type="button" name="button" onclick="Bf3(); main()"></button><br>
+    </div>
+    <div id="line2">
+      <button id="B4" type="button" name="button" onclick="Bf4(); main()"></button>
+      <button id="B5" type="button" name="button" onclick="Bf5(); main()"></button>
+      <button id="B6" type="button" name="button" onclick="Bf6(); main()"></button>
+      <a id="anzeigeGrün"></a><br>
+    </div>
+    <div id="line3">
+      <button id="B7" type="button" name="button" onclick="Bf7(); main()"></button>
+      <button id="B8" type="button" name="button" onclick="Bf8(); main()"></button>
+      <button id="B9" type="button" name="button" onclick="Bf9(); main()"></button>
+      <a id="anzeigeBlau"></a><br>
+    </div>
   </div>
  </body>
 </html>
