--- a/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
+++ b/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
@@ -28,14 +28,14 @@
     <div id="line2">
       <button id="B4" type="button" name="button" onclick="Bf4(); main()"></button>
       <button id="B5" type="button" name="button" onclick="Bf5(); main()"></button>
-      <button id="B6" type="button" name="button" onclick="Bf6(); main()"></button>
-      <a id="anzeigeGrün"></a><br>
+      <button id="B6" type="button" name="button" onclick="Bf6(); main()"></button><br>
     </div>
     <div id="line3">
       <button id="B7" type="button" name="button" onclick="Bf7(); main()"></button>
       <button id="B8" type="button" name="button" onclick="Bf8(); main()"></button>
-      <button id="B9" type="button" name="button" onclick="Bf9(); main()"></button>
+      <button id="B9" type="button" name="button" onclick="Bf9(); main()"></button><br><br>
       <a id="anzeigeBlau"></a><br>
+      <a id="anzeigeGrün"></a><br>
     </div>
   </div>
  </body>
