--- a/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
+++ b/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
@@ -15,6 +15,11 @@
    </ul>
   </div>
 
+  <div id="Timeline">
+    <a><h2>Timer:</h2></a>
+    <input style="height:30px" value="3" type="tel" placeholder="Timer" id="Timer"><br>
+  </div>
+
   <div>
     <h2 id="Anzeige"> </h2>
   </div>
