--- a/Games/Games.html
+++ b/Games/Games.html
@@ -8,10 +8,11 @@
  </head>
  <body>
   <div id="header">
-   <ul id="nav">
-    <li><h2><a href="../index.html">Startseite</a></h2></li>
-    <li><h2><a href="Tic-Tac-Toe/Tic-Tac-Toe.html">Tic-Tac-Toe</a><h2></li>
-   </ul>
+      <ul id="nav">
+          <li><h2><a href="../index.html">Startseite</a></h2></li>
+          <li><h2><a href="Tic-Tac-Toe/Tic-Tac-Toe.html">Tic-Tac-Toe</a><h2></li>
+          <li><h2><a href="Hangman/Hangman.html">Hangman</a><h2></li>
+      </ul>
   </div>
  </body>
 </html>
