--- a/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
+++ b/Games/Tic-Tac-Toe/Tic-Tac-Toe.html
@@ -11,13 +11,14 @@
   <div id="header">
    <ul id="nav">
     <li><h2><a href="../../index.html">Startseite</a></h2></li>
-    <li><h2><a href="Tic-Tac-Toe.html">Tic-Tac-Toe</a><h2></li>
+    <li><h2><a href="Tic-Tac-Toe.html">Tic-Tac-Toe</a></h2></li>
+    <li><h2><a href="../Hangman/Hangman.html">Hangman</a></h2></li>
    </ul>
   </div>
 
   <div id="Timeline">
     <a><h2>Timer:</h2></a>
-    <input style="height:30px" value="3" type="tel" placeholder="Timer" id="Timer"><br>
+    <input style="height:30px" value="3" type="tel" placeholder="Timer" id="Timer"><br/>
   </div>
 
   <div>
