--- a/Games/Hangman/Hangman.html
+++ b/Games/Hangman/Hangman.html
@@ -22,7 +22,7 @@
       </div>
 
       <div>
-        <input type="tel" placeholder="Worteingabe" id="Eingabe"> 
+        <input type="text" placeholder="Worteingabe" id="Eingabe"> 
         <button onclick="game()">Bestätigen</button><br>
        </div>   
 
