--- a/Games/Hangman/Hangman.html
+++ b/Games/Hangman/Hangman.html
@@ -24,7 +24,7 @@
       <div>
           <input type="text" placeholder="Worteingabe" id="Eingabe">
           <button onclick="game()">Bestätigen</button>
-          <button id="random_button" onclick="random()">Randome</button><br>
+          <button id="random_button" onclick="random()">Zufällig</button><br>
       </div>   
 
       <div>
