--- a/Rechner/Gradwertrechner.html
+++ b/Rechner/Gradwertrechner.html
@@ -10,10 +10,10 @@
   <div id="header">
    <ul id="nav">
     <li><h2><a href="../index.html">Startseite</a></h2></li>
-    <li><h2><a href="Gradwertrechner.html">Gradwert-Rechner</a><h2></li>
-    <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahl-Rechner</a></h2></il>
+    <li><h2><a href="Gradwertrechner.html">Gradwert-Rechner</a></h2></li>
+    <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahl-Rechner</a></h2></li>
     <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>
-    <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></<h2></li>
+    <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></</h2></li>
    </ul>
   </div>
   <!-- Umfangeingabe Eingabefeld 1 -->
@@ -25,7 +25,7 @@
   <!-- Gradwerteeingabe Eingabefeld 2 -->
   <div id="Eingabe2">
    <h2>Gib deine zu berechnende Gradzahl ein:</h2>
-   <input style="height:30px"; type="tel" placeholder="Gradwerte" id="Gradwerte">
+   <input style="height:30px"; type="tel" placeholder="Gradwert" id="Gradwerte">
 
   <!--Enterbutton Trigger-->
    <script>
