--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>Gradrechner</title>
  </head>
  <body>
-  <div id="header">
-   <ul id="nav">
-    <li><h2><a href="index.html">Startseite</a></h2></li>
-    <li><h2><a href="Rechner/Rechner.html">Rechner</a><h2></li>
-    <li><h2><a href="Tabellen/Tabellen.html">Tabellen</a></h2></il>
-    <li><h2><a href="Games/Games.html">Games</a></h2></il>
-   </ul>
-  </div>
+     <div id="header">
+         <ul id="nav">
+             <li><h2><a href="index.html">Startseite</a></h2></li>
+             <li><h2><a href="Rechner/Rechner.html">Rechner</a></h2></li>
+             <li><h2><a href="Tabellen/Tabellen.html">Tabellen</a></h2></li>
+             <li><h2><a href="Games/Games.html">Games</a></h2></li>
+         </ul>
+     </div>
  </body>
 </html>
