--- a/Rechner/Gradwertrechner.html
+++ b/Rechner/Gradwertrechner.html
@@ -7,40 +7,41 @@
   <title>Gradrechner</title>
  </head>
  <body>
-  <div id="header">
-   <ul id="nav">
-    <li><h2><a href="../index.html">Startseite</a></h2></li>
-    <li><h2><a href="Gradwertrechner.html">Gradwert-Rechner</a></h2></li>
-    <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahl-Rechner</a></h2></li>
-    <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>
-    <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></</h2></li>
-   </ul>
-  </div>
-  <!-- Umfangeingabe Eingabefeld 1 -->
-  <div id="Eingabe1">
-   <h2>Gib deinen Umfang ein:</h2>
-   <input style="height: 30px"; type="tel" placeholder="Umfang" id="Umfang">
-   <p id="U"> </p>
-  </div>
-  <!-- Gradwerteeingabe Eingabefeld 2 -->
-  <div id="Eingabe2">
-   <h2>Gib deine zu berechnende Gradzahl ein:</h2>
-   <input style="height:30px"; type="tel" placeholder="Gradwert" id="Gradwerte">
+     <button id="headerButton" onclick="sers()">Menü</button>
+     <div id="header">
+         <ul id="nav">
+             <li><h2><a href="../index.html">Startseite</a></h2></li>
+             <li><h2><a href="Gradwertrechner.html">Gradwert-Rechner</a></h2></li>
+             <li><h2><a href="Bohrerdrehzahl.html">Bohrerdrehzahl-Rechner</a></h2></li>
+             <li><h2><a href="Blech-Gewicht-Rechner.html">Blech-Gewicht-Rechner</a></h2></li>
+             <li><h2><a href="Kreissegment-Rechner.html">Kreissegment-Rechner</a></</h2></li>
+         </ul>
+     </div>
+     <!-- Umfangeingabe Eingabefeld 1 -->
+     <div id="Eingabe1">
+         <h2>Gib deinen Umfang ein:</h2>
+         <input style="height: 30px" ; type="tel" placeholder="Umfang" id="Umfang">
+         <p id="U"> </p>
+     </div>
+     <!-- Gradwerteeingabe Eingabefeld 2 -->
+     <div id="Eingabe2">
+         <h2>Gib deine zu berechnende Gradzahl ein:</h2>
+         <input style="height:30px" ; type="tel" placeholder="Gradwert" id="Gradwerte">
 
-  <!--Enterbutton Trigger-->
-   <script>
-   document.addEventListener ('keypress', function(e){
-     if (e.key === 'Enter'){
-       Berechnen();
-     }
-   });
-   </script>
+         <!--Enterbutton Trigger-->
+         <script>
+             document.addEventListener('keypress', function (e) {
+                 if (e.key === 'Enter') {
+                     Berechnen();
+                 }
+             });
+         </script>
 
-   <!--Berechnungsbutton-->
-   <button id="Gradbutton" onclick="Berechnen()">Berechnen</button>
-   <br><br>
-  </div>
-  <!--Anzeige-->
-  <div id="Anzeige"> </div>
+         <!--Berechnungsbutton-->
+         <button id="Gradbutton" onclick="Berechnen()">Berechnen</button>
+         <br><br>
+     </div>
+     <!--Anzeige-->
+     <div id="Anzeige"> </div>
  </body>
 </html>
